--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preinstall": "rm -fr lib; mkdir lib; cp src/*.js lib; coffee --compile --bare --output lib src"
   },
   "dependencies": {
+    "color": "^0.7.1",
     "tmp": "0.0.24"
   },
   "repository": {
