--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Paul Nechifor <paul@nechifor.net> (http://nechifor.net/)",
   "main": "./lib",
   "scripts": {
-    "preinstall": "rm -fr lib; mkdir lib; cp src/*.js lib; coffee --compile --bare --output lib src"
+    "postinstall": "rm -fr lib; mkdir lib; coffee -cbo lib src"
   },
   "dependencies": {
     "color": "^0.7.1",
